--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "air compressor valve controller",
   "main": "app.ts",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start-pm2": "pm2 stop air && tsc && cp -r src/public/ ./dist/su && pm2 start dist/server.js --name air && pm2 save"
+    "start": "ts-node-dev   --transpile-only src/server.ts",
+    "start-pm2": "pm2 stop air && tsc && cp -r src/public/ ./dist/ && pm2 start dist/server.js --name air && pm2 save"
   },
   "author": "",
   "license": "ISC",
