--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^16.3.0",
+    "@types/node": "^16.11.7",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.3.5"
+    "typescript": "^4.4.4"
   },
   "dependencies": {
-    "fastify": "^3.19.0",
-    "fastify-static": "^4.2.2",
+    "axios": "^0.24.0",
+    "fastify": "^3.23.1",
+    "fastify-static": "^4.5.0",
     "onoff": "^6.0.3",
-    "pino-pretty": "^5.1.1"
+    "pino-pretty": "^5.1.3"
   }
 }
